--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Template</title>
+        <title>Install this app</title>
 		<style>
 		body {
 		font-family: sans-serif;
@@ -12,6 +12,7 @@
 		<link rel="manifest" href="manifest.webmanifest">
     </head>
     <body>
-<h1>Template</h1>
+	    <h1>PWA test</h1>
+	    <h3>An install app button should be here</h3>
     </body>
 </html>
